@@ -18,9 +18,10 @@ package org.apache.jackrabbit.oak.spi.security.authentication.external;
 
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Set;
+
 import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.Test;
@@ -155,7 +156,7 @@ public class ExternalIdentityRefTest {
             @NotNull
             @Override
             public Iterable<ExternalIdentityRef> getDeclaredGroups() {
-                return ImmutableSet.of();
+                return Set.of();
             }
 
             @NotNull
