@@ -18,9 +18,7 @@ package org.apache.jackrabbit.oak.spi.security.authentication.external.basic;
 
 import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
-import org.apache.jackrabbit.guava.common.collect.Lists;
 import org.apache.jackrabbit.api.security.user.Authorizable;
 import org.apache.jackrabbit.api.security.user.Group;
 import org.apache.jackrabbit.api.security.user.User;
@@ -54,6 +52,7 @@ import java.io.ByteArrayInputStream;
 import java.math.BigDecimal;
 import java.security.Principal;
 import java.text.Normalizer;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collection;
@@ -62,6 +61,7 @@ import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 
 import static org.junit.Assert.assertArrayEquals;
@@ -1028,7 +1028,7 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
         User u = getTestUser();
 
         assertNull(userManager.getAuthorizable("anyGroup", Group.class));
-        syncCtx.applyMembership(u, ImmutableSet.of("anyGroup"));
+        syncCtx.applyMembership(u, Set.of("anyGroup"));
         assertFalse(root.hasPendingChanges());
     }
 
@@ -1038,7 +1038,7 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
         sync(externalUser);
         User u = getTestUser();
 
-        syncCtx.applyMembership(userManager.getAuthorizable(externalUser.getId()), ImmutableSet.of(u.getID()));
+        syncCtx.applyMembership(userManager.getAuthorizable(externalUser.getId()), Set.of(u.getID()));
         assertFalse(root.hasPendingChanges());
     }
 
@@ -1047,7 +1047,7 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
         User u = getTestUser();
         Group gr = createTestGroup();
 
-        syncCtx.applyMembership(u, ImmutableSet.of(gr.getID()));
+        syncCtx.applyMembership(u, Set.of(gr.getID()));
         assertTrue(gr.isDeclaredMember(u));
         assertTrue(root.hasPendingChanges());
     }
@@ -1459,7 +1459,7 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
 
     @Test
     public void testCreateValuesSkipsNull() throws Exception {
-        List<String> strings = Lists.newArrayList("s", null, null, "t");
+        List<String> strings = new ArrayList<>(Arrays.asList("s", null, null, "t"));
         Value[] vs = syncCtx.createValues(strings);
         assertNotNull(vs);
         assertEquals(2, vs.length);
@@ -1556,7 +1556,7 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
         @NotNull
         @Override
         public Iterable<ExternalIdentityRef> getDeclaredGroups() {
-            return ImmutableSet.of(declaredGroupRef);
+            return Set.of(declaredGroupRef);
         }
     }
 
