@@ -39,6 +39,7 @@ import java.io.InputStreamReader;
 import java.io.Reader;
 import java.math.BigDecimal;
 import java.security.Principal;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
@@ -81,7 +82,6 @@ import ch.qos.logback.classic.LoggerContext;
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.Appender;
 import ch.qos.logback.core.AppenderBase;
-import org.apache.jackrabbit.guava.common.collect.Lists;
 import org.apache.jackrabbit.JcrConstants;
 import org.apache.jackrabbit.api.JackrabbitNode;
 import org.apache.jackrabbit.api.JackrabbitRepository;
@@ -101,10 +101,10 @@ import org.apache.jackrabbit.spi.commons.value.QValueValue;
 import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Test;
-import org.mockito.ArgumentMatchers;
 import org.slf4j.LoggerFactory;
 
 public class RepositoryTest extends AbstractRepositoryTest {
+
     private static final String TEST_NODE = "test_node";
     private static final String TEST_PATH = '/' + TEST_NODE;
 
@@ -142,7 +142,7 @@ public class RepositoryTest extends AbstractRepositoryTest {
         assertNotNull(session);
         Set<Principal> principals = (Set<Principal>) session.getAttribute(RepositoryImpl.BOUND_PRINCIPALS);
         assertNotNull(principals);
-        Set<String> expectedPrincipalNames = new HashSet<>(Arrays.asList("admin", "everyone"));
+        Set<String> expectedPrincipalNames = Set.of("admin", "everyone");
         assertEquals(expectedPrincipalNames, principals.stream().map(Principal::getName).collect(Collectors.toSet()));
     }
 
@@ -160,7 +160,7 @@ public class RepositoryTest extends AbstractRepositoryTest {
         Set<Principal> principals = (Set<Principal>) session.getAttribute(RepositoryImpl.BOUND_PRINCIPALS);
         assertNotNull(principals);
         // admin must not be contained in the principals (altough added in the login attributes)
-        Set<String> expectedPrincipalNames = new HashSet<>(Arrays.asList("anonymous", "everyone"));
+        Set<String> expectedPrincipalNames = Set.of("anonymous", "everyone");
         assertEquals(expectedPrincipalNames, principals.stream().map(Principal::getName).collect(Collectors.toSet()));
         session.logout();
     }
@@ -1997,6 +1997,55 @@ public class RepositoryTest extends AbstractRepositoryTest {
     }
 
     @Test
+    public void testUnregisterNamespaceWhenUsed() throws RepositoryException {
+
+        // see OAK-11138
+
+        String testNamespaceName1 = "file:///foo";
+        String testNamespaceName2 = "file:///bar";
+        Session session = getAdminSession();
+
+        NamespaceRegistry nsReg = session.getWorkspace().getNamespaceRegistry();
+        assertFalse(asList(nsReg.getPrefixes()).contains("foo"));
+        assertFalse(asList(nsReg.getURIs()).contains(testNamespaceName1));
+
+        nsReg.registerNamespace("foo", testNamespaceName1);
+        assertTrue(asList(nsReg.getPrefixes()).contains("foo"));
+        assertTrue(asList(nsReg.getURIs()).contains(testNamespaceName1));
+
+        // check that nodes are "same" independent of how retrieved
+        Node x1 = session.getRootNode().addNode("foo:test");
+        session.save();
+        Node x2 = session.getRootNode().getNode("{" + testNamespaceName1 + "}test");
+        assertTrue(x1.isSame(x2));
+
+        // unregister and add with a new name
+        nsReg.unregisterNamespace("foo");
+        assertFalse(asList(nsReg.getPrefixes()).contains("foo"));
+        assertFalse(asList(nsReg.getURIs()).contains(testNamespaceName1));
+        nsReg.registerNamespace("foo", testNamespaceName2);
+        assertTrue(asList(nsReg.getPrefixes()).contains("foo"));
+        assertTrue(asList(nsReg.getURIs()).contains(testNamespaceName2));
+
+        try {
+            session.getRootNode().getNode("{" + testNamespaceName1 + "}test");
+        } catch (PathNotFoundException expected) {
+            // we expect that this fails as the namespace name has been removed
+        }
+
+        // after remapping, the node created earlier is stil accessible with the
+        // name prefix, but the expanded name has changed
+        Node x3 = session.getRootNode().getNode("{" + testNamespaceName2 + "}test");
+        Node x4 = session.getRootNode().getNode("foo:test");
+        assertTrue(x3.isSame(x4));
+
+        nsReg.unregisterNamespace("foo");
+
+        session.getRootNode().getNode("foo:test").remove();
+        session.save();
+    }
+
+    @Test
     public void sessionRemappedNamespace() throws RepositoryException {
         NamespaceRegistry nsReg =
                 getAdminSession().getWorkspace().getNamespaceRegistry();
@@ -2252,7 +2301,7 @@ public class RepositoryTest extends AbstractRepositoryTest {
 
     @Test
     public void largeMultiValueProperty() throws Exception{
-        final List<String> logMessages = Lists.newArrayList();
+        final List<String> logMessages = new ArrayList<>();
         Appender<ILoggingEvent> a = new AppenderBase<ILoggingEvent>() {
             @Override
             protected void append(ILoggingEvent e) {
