@@ -87,7 +87,7 @@ public class AbstractAccessControlManagerTest extends AbstractAccessControlTest 
     private final String testPath = '/' + testName;
     private final String nonExistingPath = "/not/existing";
 
-    private final Set<Principal> testPrincipals = ImmutableSet.of(testPrincipal);
+    private final Set<Principal> testPrincipals = Set.of(testPrincipal);
     private Privilege[] testPrivileges;
     private Privilege[] allPrivileges;
 
@@ -143,7 +143,7 @@ public class AbstractAccessControlManagerTest extends AbstractAccessControlTest 
         authorizationConfiguration = mock(AuthorizationConfiguration.class);
         when(authorizationConfiguration.getPermissionProvider(root, WSP_NAME, getEveryonePrincipalSet())).thenReturn(EmptyPermissionProvider.getInstance());
         when(authorizationConfiguration.getPermissionProvider(root, WSP_NAME, testPrincipals)).thenReturn(OpenPermissionProvider.getInstance());
-        when(authorizationConfiguration.getPermissionProvider(root, WSP_NAME, ImmutableSet.of())).thenReturn(EmptyPermissionProvider.getInstance());
+        when(authorizationConfiguration.getPermissionProvider(root, WSP_NAME, Set.of())).thenReturn(EmptyPermissionProvider.getInstance());
         when(authorizationConfiguration.getContext()).thenReturn(Context.DEFAULT);
 
         securityProvider = mock(SecurityProvider.class);
@@ -174,7 +174,7 @@ public class AbstractAccessControlManagerTest extends AbstractAccessControlTest 
     }
 
     private static Set<Principal> getEveryonePrincipalSet() {
-        return ImmutableSet.of(EveryonePrincipal.getInstance());
+        return Set.of(EveryonePrincipal.getInstance());
     }
 
     //--------------------------------------------------- protected methods >---
@@ -363,7 +363,7 @@ public class AbstractAccessControlManagerTest extends AbstractAccessControlTest 
 
     @Test(expected = PathNotFoundException.class)
     public void testHasPrivilegesNonExistingNodePathEmptyPrincipalSet() throws Exception {
-        acMgr.hasPrivileges(nonExistingPath, ImmutableSet.of(), testPrivileges);
+        acMgr.hasPrivileges(nonExistingPath, Set.of(), testPrivileges);
     }
 
     @Test
@@ -392,7 +392,7 @@ public class AbstractAccessControlManagerTest extends AbstractAccessControlTest 
     public void testHasPrivilegesInvalidPathsEveryoneSet() {
         for (String path : getInvalidPaths()) {
             try {
-                acMgr.hasPrivileges(path, ImmutableSet.of(EveryonePrincipal.getInstance()), testPrivileges);
+                acMgr.hasPrivileges(path, Set.of(EveryonePrincipal.getInstance()), testPrivileges);
                 fail("AccessControlManager#hasPrivileges for node that doesn't exist should fail.");
             } catch (RepositoryException e) {
                 // success
@@ -412,7 +412,7 @@ public class AbstractAccessControlManagerTest extends AbstractAccessControlTest 
 
     @Test
     public void testHasRepoPrivilegesEmptyPrincipalSet() throws Exception {
-        assertFalse(acMgr.hasPrivileges(null, ImmutableSet.of(), testPrivileges));
+        assertFalse(acMgr.hasPrivileges(null, Set.of(), testPrivileges));
     }
 
     //------------------------------------------------------< getPrivileges >---
@@ -423,7 +423,7 @@ public class AbstractAccessControlManagerTest extends AbstractAccessControlTest 
 
     @Test(expected = PathNotFoundException.class)
     public void testGetPrivilegesNonExistingNodePathEmptyPrincipalSet() throws Exception {
-        acMgr.getPrivileges(nonExistingPath, ImmutableSet.of());
+        acMgr.getPrivileges(nonExistingPath, Set.of());
     }
 
     @Test
@@ -448,7 +448,7 @@ public class AbstractAccessControlManagerTest extends AbstractAccessControlTest 
 
         for (String path : getInvalidPaths()) {
             try {
-                acMgr.getPrivileges(path, ImmutableSet.of());
+                acMgr.getPrivileges(path, Set.of());
                 fail("AccessControlManager#getPrivileges  for node that doesn't exist should fail.");
             } catch (RepositoryException e) {
                 // success
@@ -468,7 +468,7 @@ public class AbstractAccessControlManagerTest extends AbstractAccessControlTest 
 
     @Test
     public void testGetPrivilegesEmptyPrincipalSet() throws Exception {
-        assertArrayEquals(new Privilege[0], acMgr.getPrivileges(testPath, ImmutableSet.of()));
+        assertArrayEquals(new Privilege[0], acMgr.getPrivileges(testPath, Set.of()));
     }
 
     @Test
@@ -495,7 +495,7 @@ public class AbstractAccessControlManagerTest extends AbstractAccessControlTest 
 
     @Test
     public void testGetRepoPrivilegesEmptyPrincipalSet() throws Exception {
-        assertArrayEquals(new Privilege[0], acMgr.getPrivileges(null, ImmutableSet.of()));
+        assertArrayEquals(new Privilege[0], acMgr.getPrivileges(null, Set.of()));
     }
 
     //------------------------------------------------------< getPrivilegeCollection >---
