@@ -26,12 +26,12 @@ import java.sql.Driver;
 import java.sql.DriverManager;
 import java.sql.SQLException;
 import java.sql.SQLFeatureNotSupportedException;
-import java.util.logging.Logger;
 
 import javax.sql.DataSource;
 
 import org.apache.jackrabbit.oak.commons.properties.SystemPropertySupplier;
 import org.apache.jackrabbit.oak.plugins.document.DocumentStoreException;
+import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
@@ -39,41 +39,40 @@ import org.slf4j.LoggerFactory;
  */
 public class RDBDataSourceFactory {
 
-    private static final org.slf4j.Logger LOG = LoggerFactory.getLogger(RDBDataSourceFactory.class);
+    static final Logger LOG = LoggerFactory.getLogger(RDBDataSourceFactory.class);
 
-    public static DataSource forJdbcUrl(String url, String username, String passwd, String driverName) {
+    public static DataSource forJdbcUrl(String url, String username, String passwd, String specifiedDriverName) {
+
+        String driverName = specifiedDriverName;
 
         // load driver class when specified
         if (driverName != null && !driverName.isEmpty()) {
-            LOG.info("trying to load {}", driverName);
+            LOG.info("trying to load specified driver {}", driverName);
+        } else {
+            // otherwise try to determine driver from JDBC URL
+            driverName = RDBJDBCTools.driverForDBType(RDBJDBCTools.jdbctype(url));
+            if (driverName != null && !driverName.isEmpty()) {
+                LOG.info("trying to load defaulted driver {}", driverName);
+            }
+        }
 
+        if (driverName != null && !driverName.isEmpty()) {
             try {
                 Class.forName(driverName);
             } catch (ClassNotFoundException ex) {
-                LOG.error("driver " + driverName + " not loaded", ex);
-            }
-        } else {
-            // try to determine driver from JDBC URL
-            String defaultDriver = RDBJDBCTools.driverForDBType(RDBJDBCTools.jdbctype(url));
-            if (defaultDriver != null && !defaultDriver.isEmpty()) {
-                LOG.info("trying to load {}", defaultDriver);
-
-                try {
-                    Class.forName(defaultDriver);
-                } catch (ClassNotFoundException ex) {
-                    LOG.error("driver " + defaultDriver + " not loaded", ex);
-                }
+                LOG.debug("driver " + driverName + " not loaded", ex);
+                LOG.info("driver {} not loaded ({})", driverName, ex.getClass());
             }
         }
 
         try {
-            LOG.debug("Getting driver for " + url);
+            LOG.info("Getting driver for {}", url);
             Driver d = DriverManager.getDriver(url);
 
             String classname = "org.apache.tomcat.jdbc.pool.DataSource";
             try {
                 Class<?> dsclazz = Class.forName(classname);
-                DataSource ds = (DataSource) dsclazz.newInstance();
+                DataSource ds = (DataSource) dsclazz.getDeclaredConstructor().newInstance();
                 dsclazz.getMethod("setDriverClassName", String.class).invoke(ds, d.getClass().getName());
                 dsclazz.getMethod("setUsername", String.class).invoke(ds, username);
                 dsclazz.getMethod("setPassword", String.class).invoke(ds, passwd);
@@ -88,12 +87,14 @@ public class RDBDataSourceFactory {
                 return new CloseableDataSource(ds);
             } catch (Exception ex) {
                 String message = "trying to create datasource " + classname;
-                LOG.info(message, ex);
+                LOG.debug(message, ex);
+                LOG.info(message + " (" + ex.getMessage() + ")");
                 throw new DocumentStoreException(message, ex);
             }
         } catch (SQLException ex) {
-            String message = "trying to obtain driver for " + url;
-            LOG.info(message, ex);
+            String message = "failed to to obtain driver for " + url;
+            LOG.debug(message, ex);
+            LOG.info(message + " (" + ex.getMessage() + ")");
             throw new DocumentStoreException(message, ex);
         }
     }
@@ -139,6 +140,7 @@ public class RDBDataSourceFactory {
             return c.isInstance(this) || c.isInstance(this.ds) || this.ds.isWrapperFor(c);
         }
 
+        @SuppressWarnings("unchecked")
         @Override
         public <T> T unwrap(Class<T> c) throws SQLException {
             return c.isInstance(this) ? (T) this : c.isInstance(this.ds) ? (T) this.ds : this.ds.unwrap(c);
@@ -171,9 +173,7 @@ public class RDBDataSourceFactory {
             return this.ds.getConnection(user, passwd);
         }
 
-        // needed in Java 7...
-        @SuppressWarnings("unused")
-        public Logger getParentLogger() throws SQLFeatureNotSupportedException {
+        public java.util.logging.Logger getParentLogger() throws SQLFeatureNotSupportedException {
             throw new SQLFeatureNotSupportedException();
         }
 
